# cost-optimizer

./: .env.example  .gitignore  Dockerfile  deploy.example.sh  package-lock.json  package.json  pyproject.toml  serverless.yml
src/: main.py
src/config/: __init__.py
src/infra-handlers/: ec2.py
src/infra_handlers/: auto_scalining.py  ec2.py  ecs.py  rds.py
src/lambda_handlers/: start.py  stop.py
