[tool.poetry]
name = "projectc-dev-server-cost-optimizer"
version = "0.1.0"
description = ""
authors = ["pinkiepie <pinkiepies0912@gmail.com>"]
readme = "README.md"
packages = [{include = "projectc_dev_server_cost_optimizer"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
