[tool.poetry]
name = "cost-optimizer"
version = "0.1.0"
description = ""
authors = ["pinkiepie <pinkiepies0912@gmail.com>"]
readme = "README.md"
packages = [{include = "cost_optimizer"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.27.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88 
target-version = ['py38', 'py39', 'py310']
